--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,4 +5,9 @@ authors = ["Andrew Palmer <andrew.pa@outlook.com>"]
 
 [dependencies]
 runic = { path = "../runic" }
-winit = "0.8"
+winit = "0.11"
+toml = "0.4"
+json = "0.11"
+futures = "0.1"
+mio = "0.6"
+mio-named-pipes = "0.1"
